--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
             <title>Hi</title>
         </head>
         <style type="text/css">
+            body {
+                background-color: rgb(147, 250, 165);
+                color: white;
+            }
             h1 {
                 position: absolute;
                 top : 40%;
