--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             }
         </style>
         <body>
-            <h1>Hello World, how are you Buddy ?!</h1>
+            <h1>Bonjour</h1>
         </body>
     </html>
 </DOCTYPE>
