--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <style type="text/css">
             body {
                 background-color: rgb(250, 185, 147);
-                color: white;
+                color: green;
             }
             h1 {
                 position: absolute;
